# ChangeLog for mail-client/mozilla-thunderbird-bin
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/mail-client/mozilla-thunderbird-bin/ChangeLog,v 1.69 2007/04/17 14:07:06 armin76 Exp $

  17 Apr 2007; Raúl Porcel <armin76@gentoo.org>
  mozilla-thunderbird-bin-1.5.0.10.ebuild:
  Fix deps, bug 172434

  18 Mar 2007; Marius Mauch <genone@gentoo.org>
  mozilla-thunderbird-bin-1.5.0.10.ebuild:
  Replacing einfo with elog

  04 Mar 2007; Raúl Porcel <armin76@gentoo.org>
  -mozilla-thunderbird-bin-1.5.0.9.ebuild:
  old

  03 Mar 2007; Steve Dibb <beandog@gentoo.org>
  mozilla-thunderbird-bin-1.5.0.10.ebuild:
  amd64 stable, security bug 165555

  02 Mar 2007; Raúl Porcel <armin76@gentoo.org>
  mozilla-thunderbird-bin-1.5.0.10.ebuild:
  x86 stable wrt security bug 165555

*mozilla-thunderbird-bin-1.5.0.10 (01 Mar 2007)

  01 Mar 2007; Raúl Porcel <armin76@gentoo.org>
  +mozilla-thunderbird-bin-1.5.0.10.ebuild:
  Version bump, wrt security bug 165555

  14 Feb 2007; Raúl Porcel <armin76@gentoo.org>
  files/icon/mozilla-thunderbird-bin.desktop,
  mozilla-thunderbird-bin-1.5.0.9.ebuild:
  Fix icon location

  14 Feb 2007; Raúl Porcel <armin76@gentoo.org>
  +files/icon/mozilla-thunderbird-bin.desktop,
  +files/icon/mozilla-thunderbird-bin-icon.png,
  -files/icon/mozillathunderbird-bin.desktop,
  -files/icon/mozillathunderbird-bin-icon.png,
  mozilla-thunderbird-bin-1.5.0.9.ebuild:
  Fix .desktop files, bug 147735, and drop monolithic X deps and virtual/libc

  11 Jan 2007; Raúl Porcel <armin76@gentoo.org>
  mozilla-thunderbird-bin-1.5.0.9.ebuild:
  license change, bug 150118

  08 Jan 2007; Raúl Porcel <armin76@gentoo.org>
  -mozilla-thunderbird-bin-1.5.0.7.ebuild,
  -mozilla-thunderbird-bin-1.5.0.8.ebuild:
  Remove old

  29 Dec 2006; Danny van Dyk <kugelfang@gentoo.org>
  mozilla-thunderbird-bin-1.5.0.9.ebuild:
  Marked stable on amd64 wrt security bug #158571.
