@@ -46,15 +46,52 @@ DIST mozilla-thunderbird-1.5.0.10-sl.xpi 187718 RMD160 19e66b2fa536ee2e4944fbd04
 DIST mozilla-thunderbird-1.5.0.10-sv-SE.xpi 191057 RMD160 9af7a0591f1a203b01cca729fb841a9ac1216f1e SHA1 1ee6ff2dd0db20c7d55013fb701c7fe7d8ebc04d SHA256 29a77d8ef8b2ed81d3a3d390ade969747749b08a9fdb5f98b926562f02f2a631
 DIST mozilla-thunderbird-1.5.0.10-tr.xpi 155700 RMD160 54eda4d5ea7dee070563fd7b85094b74038ca483 SHA1 97690ac80cbebaba8d02d84316b65eb8e5b5f8d3 SHA256 70522702e10a4a3bbf307f3b538df1d3a6c5fb8a117ba18964fd0e3c0f632dd9
 DIST mozilla-thunderbird-1.5.0.10-zh-CN.xpi 155477 RMD160 9fa05f691f23753359f2545c04ff62ff2ac9de69 SHA1 6c4493a8d54b8b935453ecf0674b27ae94867ef6 SHA256 4eaed2be24710c7321524d60cf4b34cbad4839d21ff84994cb9a558534a7a011
+DIST mozilla-thunderbird-2.0.0.0-be.xpi 183193 RMD160 5e60f6f5d08c8c74971d0baf67f974f2e90580d1 SHA1 a2940b5ad7352fbeff0a9aeaa71fc405abdb45d9 SHA256 9691cf911c49196b754e562defdab9f8b700054d596f2ad07b4c74eb4b7d8554
+DIST mozilla-thunderbird-2.0.0.0-bg.xpi 194712 RMD160 03668cbfb624392d1395c05a8600ff02b1f49775 SHA1 41025e8142b979f3c4b4c7d2b2b94373543886ef SHA256 73db3e1b9dd4e0ac0dfe8aca3feecd49e2b08de35cd4d440edf132fcb5628dd2
+DIST mozilla-thunderbird-2.0.0.0-ca.xpi 182510 RMD160 f574ce7a8aacc66072025d1fc23c475f150c685d SHA1 52f48cd082c571c7c20510baeee42d77f4224329 SHA256 df3ad94cd71193c0544a336f42f93545012a75bdfd686679020599575b65b28e
+DIST mozilla-thunderbird-2.0.0.0-cs.xpi 184265 RMD160 e37d98b0ce14fca821c9d84f5b027cf3809eaa9b SHA1 c3ae345ce2f7b42a577e7e8d59b9494badbdd897 SHA256 24c0590f783d6736405ed915bbbec1bcc35ad597cc9bd9532957df5aec929793
+DIST mozilla-thunderbird-2.0.0.0-da.xpi 177344 RMD160 e31f04de1b2e4822c5651a32935c71ff1211ef68 SHA1 8085b1b3fb4b6372d5d5bc93dd586317ce044b61 SHA256 046a41260f903c5e2225d816995f954db7e4107440e1eeab29d063b39c51ad19
+DIST mozilla-thunderbird-2.0.0.0-de.xpi 156460 RMD160 7375cef6a35de5cff8962faab3eedf41524af987 SHA1 0f54131e6862dd67834ea9753ce7192aa323c7cf SHA256 dd762d5d2a11d53164b5a332bbee54f21f5c5f79e442a2aa29cabe6a7042c227
+DIST mozilla-thunderbird-2.0.0.0-el.xpi 181368 RMD160 2224f36cd2322e88d6b985fc5151d98651d36f7c SHA1 40ddbb29b7561f79be492f5958ead64dd6aa9d88 SHA256 cd2e7913ece4781fb8130360052ea56cfa8f5e304db21f08dae336562de6ab2d
+DIST mozilla-thunderbird-2.0.0.0-en-GB.xpi 171298 RMD160 dcf3a27faf1e84c85cb6ae210b9505aea8335414 SHA1 b86144a7711931caa930a22614a5f93351543a6d SHA256 8788ba1db4eb50db3eedb9ff2616b77bba4be33ba2128d93df32b2402b470d61
+DIST mozilla-thunderbird-2.0.0.0-es-AR.xpi 183052 RMD160 72ac333228ffe4938883bdad2d81df7e9ddb42d3 SHA1 3ddf4113cdfa21f7dbac097c8345285ec70d979c SHA256 cd3317be965d3c8ea9904885b32ca35dcc157cd4f2d4c3d4635e6c88cb57950f
+DIST mozilla-thunderbird-2.0.0.0-es-ES.xpi 145787 RMD160 3d79ac2461db2c3d9b56014130002f578bdc3b53 SHA1 5febaecb47a2933b5baea38073cf7480207046b7 SHA256 cbeb09854fd14cd8b5e8de7b486ffc343f2046a24f41006f6fed4a84686cfd97
+DIST mozilla-thunderbird-2.0.0.0-eu.xpi 179945 RMD160 5fc8b4fde4e3d70e65909600084a61c6ebd12dc8 SHA1 9b3aa98ddecbcad273e6f155c569bb54ec86e17e SHA256 ee8c3742e12d3dd996ad3f424302b554bd6d5132cf2a6cb415398cc6ad719610
+DIST mozilla-thunderbird-2.0.0.0-fi.xpi 185802 RMD160 7dfb71dbf6090ac278beedba748a88ef87d8f1df SHA1 2a6b705ca4f2c550e2366e06f741dc14ccde6581 SHA256 cef67627edb00f7d585bc0f001a4d9b77899e50e4d0bdc7beb554244ad2c7bb3
+DIST mozilla-thunderbird-2.0.0.0-fr.xpi 189221 RMD160 ea3e35559084df8ead9c96b01e5e1c4c1eeba75b SHA1 89e3ccf715ed29d0e44ca8840a919cf5626111a8 SHA256 991e7438770ab091dd37b30f2708e804d59da244a12cc13816a8bc48956dcbcb
+DIST mozilla-thunderbird-2.0.0.0-ga-IE.xpi 184255 RMD160 763b7a71fba9e61e48c96376d0aeb75a9eaef43d SHA1 9324e8dd05b337d4d199bdde65d14b8c70df7883 SHA256 062ac0a008c7b5d9480c695fc518d6473d59ad4ec2b2bdde6afa89de9d5720da
+DIST mozilla-thunderbird-2.0.0.0-hu.xpi 189735 RMD160 0318e0eac24e4a5a5d510d0e0b8995c610849942 SHA1 9dcfdd4cbf726a317f38b7ea9dc550af76958b78 SHA256 ccc45b54683373818e83b22996def178acb7201eea716cb37c7c46c28812bacf
+DIST mozilla-thunderbird-2.0.0.0-it.xpi 151059 RMD160 22cef38e2ab26ee0be19b5b4c5a77d3c391bb369 SHA1 6e9bed69bde336208fe8bb07ee296b98c0917351 SHA256 86e838f9e436797ca1e55a3f31d409beb055f0839f4bc5f3638907bc9979dc82
+DIST mozilla-thunderbird-2.0.0.0-ja.xpi 197368 RMD160 c05bc5923ae3a434be11b4988a362ee105c4d51f SHA1 51c1d3528582a4d4826d85398881e5e1b065b050 SHA256 4612655561df9638e912d696e75bad40ed9aef565e0a3f6efbab00e90f3c97e5
+DIST mozilla-thunderbird-2.0.0.0-lt.xpi 187488 RMD160 acb4b9f967d3a06b1b6d64a8362615e3da7a74e0 SHA1 9c8b053780c315a892228d1458453c141e5d2732 SHA256 2b52e2aa24c7c3bf64d1d51d75837feee6d84230fde979f0cf974ab9418ac3b0
+DIST mozilla-thunderbird-2.0.0.0-mk.xpi 194717 RMD160 d8585ecc871e492e26a843d49c5b4b278d983d2f SHA1 359e2ef8bba327989ca0204fa64f91992463afbf SHA256 75a4e9fb2a219c2ad2038fa79ca375fef18b1c30418190df4e8a210b451d2c6a
+DIST mozilla-thunderbird-2.0.0.0-nb-NO.xpi 181497 RMD160 8bc42d2cf5f5e0cb662693240d36c31c0d246206 SHA1 15326f253b7e8c5a89b7f3140f8f8b94f42568eb SHA256 1a55709ce67a820e4d78a7fc2bed3becc232456e2ab74fb0c32c758bb212eb6d
+DIST mozilla-thunderbird-2.0.0.0-nl.xpi 182414 RMD160 6105c20f5caffe76f0fa7b649b21bd4e0d65b20a SHA1 871e1a76eb6f3b34c2c862394d178e57cb46a6c3 SHA256 767934953dff21a7f32c662c0cdc85f0f9c0d24084e332b4f075d397e5e1cf8f
+DIST mozilla-thunderbird-2.0.0.0-pa-IN.xpi 203142 RMD160 76636279135af469fac9a253ae9e94e8b71e25a5 SHA1 8d85e0b675f79c1650ef098cfd6fec2a1db307f1 SHA256 84ed27471f103ff6b65991b842d31f0e505fbeab85e5eec476447b0dcf391f6f
+DIST mozilla-thunderbird-2.0.0.0-pl.xpi 175831 RMD160 169d1dfc57a80c1239a2d5cd288d36bda6f9d5eb SHA1 2592c163823790d388f35cdfe4e5b1fbc185316d SHA256 5ba999ba93aeb3c34a90a5b0649062bedcadd857b5cf16b63266faeff705cae8
+DIST mozilla-thunderbird-2.0.0.0-pt-BR.xpi 181195 RMD160 c80a86b064d2dbf0b8c2d94e3fd8b476542dc792 SHA1 c0cfc321d04be7277df9d3bc82e86afb50fa8ce9 SHA256 157abda7a70d0ddbb846871b2f0611a24c42a25d28c3394070f995523f111bc7
+DIST mozilla-thunderbird-2.0.0.0-pt-PT.xpi 182002 RMD160 fc2ac3c59ea59d4b33e8a7fc1e03d287d77e632e SHA1 be2cd01dffc80ba4bc9d5c3a61f5a464163bf928 SHA256 6499e8cf4346393ad59e734f81378bfc7ba696cb14465e95e312c1b83dd93ea4
+DIST mozilla-thunderbird-2.0.0.0-ru.xpi 172116 RMD160 716698025eb014322dd9be9fda99a25c631baa82 SHA1 518bfe0b090d6bd5391a63db0905586d7241f933 SHA256 3e2e913f99182582280f800d0c6417fcedf8df0cdff3c16d7ef637e96da62aeb
+DIST mozilla-thunderbird-2.0.0.0-sk.xpi 189760 RMD160 0df4da6ae54c22f6ffa9232490e508039bbd1a42 SHA1 7281714e47629b27e6da38d714e9f18e06c89e58 SHA256 eb0c8f15b92947a60499b38a48f572a851d6d1e9b1de3c5c7f2ba2154bf94530
+DIST mozilla-thunderbird-2.0.0.0-sl.xpi 186147 RMD160 0b0875eff82e4075b38b77daaa5820da3b186109 SHA1 54e11c70b8ed5d9abc4813f69eadac041bf114ba SHA256 5bd2a02388d983d32a15ddaf17353adbda58e3ec1d8da5d453cb734d702f7a52
+DIST mozilla-thunderbird-2.0.0.0-sv-SE.xpi 190075 RMD160 6ed8bc55c4bdfcd7a8ca3f26397903ddcb28c06c SHA1 64f01d05f5f6fb631b312139e3c659106c49a4a0 SHA256 30f20110e50a14f41886cfb9315f70f5cfb4292c92c7d8a995d3636c130260e2
+DIST mozilla-thunderbird-2.0.0.0-tr.xpi 156123 RMD160 7184730c1e706ffafd41eea382b16a171ec45b45 SHA1 e12258e8dff51ef176b2d39e9470fd96aa60fe70 SHA256 3d8859bf76868710b6086509acc335ea02691a4b9fdb7f72b474352b2f040c22
+DIST mozilla-thunderbird-2.0.0.0-zh-CN.xpi 148711 RMD160 59f88ca0582566c1eac4527425949c46691bf1aa SHA1 b71e28b105f23208d5e4ac6b9c6fb899e62e72cf SHA256 3b167f04ba40ef051eaf2d4f49da54e39840228b5125b6156fcc9030fab543e2
+DIST mozilla-thunderbird-2.0.0.0-zh-TW.xpi 152126 RMD160 c12b5e4cb420eaf61a54dc12b00b0fe6ff870b6b SHA1 1b8b57dac3d659e4e9938e0ac5f29834a49952cf SHA256 32733dc9058e9cf00656c323796d3fc7b82952fda74f75f95fd515a0d4a70460
 DIST thunderbird-1.5.0.10.tar.gz 10680150 RMD160 c6ae540388f14628fd0880faa2e20b804fcbd14a SHA1 a55e3707bcb3cf5a7b14ec9f658ec8e9163f7c0c SHA256 46abefa6bcdbc7065f3bd735d8256250a2e22c4ea5e1953334a81d1cf4ec9324
+DIST thunderbird-2.0.0.0.tar.gz 11428569 RMD160 b6f34eca746168a1ea74785b8bafba01df50fa7c SHA1 6c95c55baf8a2b22621b8dbf804be0fa6c60d559 SHA256 68b4603485fca9291a240842fa4a79717b1ff64a73918097f8055da1c3770530
 EBUILD mozilla-thunderbird-bin-1.5.0.10.ebuild 4040 RMD160 9e9df965e9c1e4de6a3d473d531fdbbd33500a8c SHA1 ce8e340e86501df447f0c34162287250cca46e82 SHA256 6d5ad644c369208935b72d73a93c08e27b49c24f8a9e75f0ac8b912a50909efd
 MD5 a6d1f0f742387dce6d12d91e78432993 mozilla-thunderbird-bin-1.5.0.10.ebuild 4040
 RMD160 9e9df965e9c1e4de6a3d473d531fdbbd33500a8c mozilla-thunderbird-bin-1.5.0.10.ebuild 4040
 SHA256 6d5ad644c369208935b72d73a93c08e27b49c24f8a9e75f0ac8b912a50909efd mozilla-thunderbird-bin-1.5.0.10.ebuild 4040
-MISC ChangeLog 14189 RMD160 75f547a9b8df37191624e11d0cb67023cc55056b SHA1 7ddb30f3824f1c34eef2f33512d0132e23f2f33b SHA256 627d51b63e3804fe16840c6f1177b74ee67e8b8f66ef1509ffbf65f6c3c013df
-MD5 46de7b8912e35135ea937e42b0d39b40 ChangeLog 14189
-RMD160 75f547a9b8df37191624e11d0cb67023cc55056b ChangeLog 14189
-SHA256 627d51b63e3804fe16840c6f1177b74ee67e8b8f66ef1509ffbf65f6c3c013df ChangeLog 14189
+EBUILD mozilla-thunderbird-bin-2.0.0.0.ebuild 4055 RMD160 de5fa53fcc4c5b75a6d438b399e29a5213845664 SHA1 224d26262336fda1b1c3bda8a6c2db7b129c4ce8 SHA256 5b42f61c3893fdc25f7b1db7d1f7042ce3eaf706911e40c441c7c2a447896cf9
+MD5 b4b50222bdd22f10247c791a28587942 mozilla-thunderbird-bin-2.0.0.0.ebuild 4055
+RMD160 de5fa53fcc4c5b75a6d438b399e29a5213845664 mozilla-thunderbird-bin-2.0.0.0.ebuild 4055
+SHA256 5b42f61c3893fdc25f7b1db7d1f7042ce3eaf706911e40c441c7c2a447896cf9 mozilla-thunderbird-bin-2.0.0.0.ebuild 4055
+MISC ChangeLog 14345 RMD160 6e93d87a7e6266b5f7d0a37790f42dcb57b2a485 SHA1 f57444c5c569ee2a4051f90952ebf1e3bc19ed09 SHA256 75724a2f48a26d250cdcd5a153c16d166a5166f2c381eb17e93c502de48633f9
+MD5 e3c81972319b2f32e8a4330cee5ec3e8 ChangeLog 14345
+RMD160 6e93d87a7e6266b5f7d0a37790f42dcb57b2a485 ChangeLog 14345
+SHA256 75724a2f48a26d250cdcd5a153c16d166a5166f2c381eb17e93c502de48633f9 ChangeLog 14345
 MISC metadata.xml 160 RMD160 d5a9f0bf8989621c2bde30facb53bcae00aba709 SHA1 5015c07af2083f20f9552d7fb11afb5ea69af345 SHA256 0cc5126362a12cee42ec1197c528a804cf36859329dd2c6d9225726831d14b8b
 MD5 ce23390351fe8020387d93ee29e09a3d metadata.xml 160
 RMD160 d5a9f0bf8989621c2bde30facb53bcae00aba709 metadata.xml 160
@@ -62,3 +99,6 @@ SHA256 0cc5126362a12cee42ec1197c528a804cf36859329dd2c6d9225726831d14b8b metadata
 MD5 33e03dede1b07cba4656bcfc41fd4652 files/digest-mozilla-thunderbird-bin-1.5.0.10 9510
 RMD160 9bc9fb8003a76acd25071066f8b4431cd7991d67 files/digest-mozilla-thunderbird-bin-1.5.0.10 9510
 SHA256 3e9f79bdb5d1701f94523d5cf379c42f07e046b0d1993b70c5951cf4ade6e75b files/digest-mozilla-thunderbird-bin-1.5.0.10 9510
+MD5 aa9e6c6231ebd9ace82574b7f35966f8 files/digest-mozilla-thunderbird-bin-2.0.0.0 9420
+RMD160 45272af89515d16690284102073d72e80add59c9 files/digest-mozilla-thunderbird-bin-2.0.0.0 9420
+SHA256 eee21439de0b7b3639b41e59e2a91beeaa4168fa3f8005ca908a505d76cbe8f0 files/digest-mozilla-thunderbird-bin-2.0.0.0 9420
