@@ -1,0 +1,99 @@
+MD5 33219d17c8ebfb3493889b989be17129 mozilla-thunderbird-2.0.0.0-be.xpi 183193
+RMD160 5e60f6f5d08c8c74971d0baf67f974f2e90580d1 mozilla-thunderbird-2.0.0.0-be.xpi 183193
+SHA256 9691cf911c49196b754e562defdab9f8b700054d596f2ad07b4c74eb4b7d8554 mozilla-thunderbird-2.0.0.0-be.xpi 183193
+MD5 01e9144fcac9bf8e6c74463b10ff0c65 mozilla-thunderbird-2.0.0.0-bg.xpi 194712
+RMD160 03668cbfb624392d1395c05a8600ff02b1f49775 mozilla-thunderbird-2.0.0.0-bg.xpi 194712
+SHA256 73db3e1b9dd4e0ac0dfe8aca3feecd49e2b08de35cd4d440edf132fcb5628dd2 mozilla-thunderbird-2.0.0.0-bg.xpi 194712
+MD5 fca68b8a5f311001dbe8ca71523f1945 mozilla-thunderbird-2.0.0.0-ca.xpi 182510
+RMD160 f574ce7a8aacc66072025d1fc23c475f150c685d mozilla-thunderbird-2.0.0.0-ca.xpi 182510
+SHA256 df3ad94cd71193c0544a336f42f93545012a75bdfd686679020599575b65b28e mozilla-thunderbird-2.0.0.0-ca.xpi 182510
+MD5 4476c2cd96482ad2515ab86653c57152 mozilla-thunderbird-2.0.0.0-cs.xpi 184265
+RMD160 e37d98b0ce14fca821c9d84f5b027cf3809eaa9b mozilla-thunderbird-2.0.0.0-cs.xpi 184265
+SHA256 24c0590f783d6736405ed915bbbec1bcc35ad597cc9bd9532957df5aec929793 mozilla-thunderbird-2.0.0.0-cs.xpi 184265
+MD5 c072ede3134616df7590942273a4ae01 mozilla-thunderbird-2.0.0.0-da.xpi 177344
+RMD160 e31f04de1b2e4822c5651a32935c71ff1211ef68 mozilla-thunderbird-2.0.0.0-da.xpi 177344
+SHA256 046a41260f903c5e2225d816995f954db7e4107440e1eeab29d063b39c51ad19 mozilla-thunderbird-2.0.0.0-da.xpi 177344
+MD5 49003db99b89704abaa6a5b50ad74193 mozilla-thunderbird-2.0.0.0-de.xpi 156460
+RMD160 7375cef6a35de5cff8962faab3eedf41524af987 mozilla-thunderbird-2.0.0.0-de.xpi 156460
+SHA256 dd762d5d2a11d53164b5a332bbee54f21f5c5f79e442a2aa29cabe6a7042c227 mozilla-thunderbird-2.0.0.0-de.xpi 156460
+MD5 16edd76d55899d09f7c2add353246256 mozilla-thunderbird-2.0.0.0-el.xpi 181368
+RMD160 2224f36cd2322e88d6b985fc5151d98651d36f7c mozilla-thunderbird-2.0.0.0-el.xpi 181368
+SHA256 cd2e7913ece4781fb8130360052ea56cfa8f5e304db21f08dae336562de6ab2d mozilla-thunderbird-2.0.0.0-el.xpi 181368
+MD5 a3128939b60398e2aface42bcf82e7e1 mozilla-thunderbird-2.0.0.0-en-GB.xpi 171298
+RMD160 dcf3a27faf1e84c85cb6ae210b9505aea8335414 mozilla-thunderbird-2.0.0.0-en-GB.xpi 171298
+SHA256 8788ba1db4eb50db3eedb9ff2616b77bba4be33ba2128d93df32b2402b470d61 mozilla-thunderbird-2.0.0.0-en-GB.xpi 171298
+MD5 03d2ab4d5e637b636c96074db6e939b4 mozilla-thunderbird-2.0.0.0-es-AR.xpi 183052
+RMD160 72ac333228ffe4938883bdad2d81df7e9ddb42d3 mozilla-thunderbird-2.0.0.0-es-AR.xpi 183052
+SHA256 cd3317be965d3c8ea9904885b32ca35dcc157cd4f2d4c3d4635e6c88cb57950f mozilla-thunderbird-2.0.0.0-es-AR.xpi 183052
+MD5 86a7a95e6714f81caf97c937181faf3c mozilla-thunderbird-2.0.0.0-es-ES.xpi 145787
+RMD160 3d79ac2461db2c3d9b56014130002f578bdc3b53 mozilla-thunderbird-2.0.0.0-es-ES.xpi 145787
+SHA256 cbeb09854fd14cd8b5e8de7b486ffc343f2046a24f41006f6fed4a84686cfd97 mozilla-thunderbird-2.0.0.0-es-ES.xpi 145787
+MD5 b28a67ca04b2f00de3be823e884fff7f mozilla-thunderbird-2.0.0.0-eu.xpi 179945
+RMD160 5fc8b4fde4e3d70e65909600084a61c6ebd12dc8 mozilla-thunderbird-2.0.0.0-eu.xpi 179945
+SHA256 ee8c3742e12d3dd996ad3f424302b554bd6d5132cf2a6cb415398cc6ad719610 mozilla-thunderbird-2.0.0.0-eu.xpi 179945
+MD5 5a52afcdcd178d7fa241527a5c8d3854 mozilla-thunderbird-2.0.0.0-fi.xpi 185802
+RMD160 7dfb71dbf6090ac278beedba748a88ef87d8f1df mozilla-thunderbird-2.0.0.0-fi.xpi 185802
+SHA256 cef67627edb00f7d585bc0f001a4d9b77899e50e4d0bdc7beb554244ad2c7bb3 mozilla-thunderbird-2.0.0.0-fi.xpi 185802
+MD5 805d582e5bd90b3f4d42eefe5e1d6b1a mozilla-thunderbird-2.0.0.0-fr.xpi 189221
+RMD160 ea3e35559084df8ead9c96b01e5e1c4c1eeba75b mozilla-thunderbird-2.0.0.0-fr.xpi 189221
+SHA256 991e7438770ab091dd37b30f2708e804d59da244a12cc13816a8bc48956dcbcb mozilla-thunderbird-2.0.0.0-fr.xpi 189221
+MD5 d2c521b2229231b3dc427dea9883a51e mozilla-thunderbird-2.0.0.0-ga-IE.xpi 184255
+RMD160 763b7a71fba9e61e48c96376d0aeb75a9eaef43d mozilla-thunderbird-2.0.0.0-ga-IE.xpi 184255
+SHA256 062ac0a008c7b5d9480c695fc518d6473d59ad4ec2b2bdde6afa89de9d5720da mozilla-thunderbird-2.0.0.0-ga-IE.xpi 184255
+MD5 9d6fca29ffeac80648bc07f3f348b535 mozilla-thunderbird-2.0.0.0-hu.xpi 189735
+RMD160 0318e0eac24e4a5a5d510d0e0b8995c610849942 mozilla-thunderbird-2.0.0.0-hu.xpi 189735
+SHA256 ccc45b54683373818e83b22996def178acb7201eea716cb37c7c46c28812bacf mozilla-thunderbird-2.0.0.0-hu.xpi 189735
+MD5 e623aebea37a4aa248e483cc47364489 mozilla-thunderbird-2.0.0.0-it.xpi 151059
+RMD160 22cef38e2ab26ee0be19b5b4c5a77d3c391bb369 mozilla-thunderbird-2.0.0.0-it.xpi 151059
+SHA256 86e838f9e436797ca1e55a3f31d409beb055f0839f4bc5f3638907bc9979dc82 mozilla-thunderbird-2.0.0.0-it.xpi 151059
+MD5 39d005a1b15b7bdd9c8e69886b6bd8b3 mozilla-thunderbird-2.0.0.0-ja.xpi 197368
+RMD160 c05bc5923ae3a434be11b4988a362ee105c4d51f mozilla-thunderbird-2.0.0.0-ja.xpi 197368
+SHA256 4612655561df9638e912d696e75bad40ed9aef565e0a3f6efbab00e90f3c97e5 mozilla-thunderbird-2.0.0.0-ja.xpi 197368
+MD5 95e9220661994041e5d34b57f311df3a mozilla-thunderbird-2.0.0.0-lt.xpi 187488
+RMD160 acb4b9f967d3a06b1b6d64a8362615e3da7a74e0 mozilla-thunderbird-2.0.0.0-lt.xpi 187488
+SHA256 2b52e2aa24c7c3bf64d1d51d75837feee6d84230fde979f0cf974ab9418ac3b0 mozilla-thunderbird-2.0.0.0-lt.xpi 187488
+MD5 7fa1cc8ee67640908774e9c3bea66cfb mozilla-thunderbird-2.0.0.0-mk.xpi 194717
+RMD160 d8585ecc871e492e26a843d49c5b4b278d983d2f mozilla-thunderbird-2.0.0.0-mk.xpi 194717
+SHA256 75a4e9fb2a219c2ad2038fa79ca375fef18b1c30418190df4e8a210b451d2c6a mozilla-thunderbird-2.0.0.0-mk.xpi 194717
+MD5 2e213a40a45b8ec91d3ecde59eeaf6d8 mozilla-thunderbird-2.0.0.0-nb-NO.xpi 181497
+RMD160 8bc42d2cf5f5e0cb662693240d36c31c0d246206 mozilla-thunderbird-2.0.0.0-nb-NO.xpi 181497
+SHA256 1a55709ce67a820e4d78a7fc2bed3becc232456e2ab74fb0c32c758bb212eb6d mozilla-thunderbird-2.0.0.0-nb-NO.xpi 181497
+MD5 e6c7385f83ee34dc59d1a2eb00caeed7 mozilla-thunderbird-2.0.0.0-nl.xpi 182414
+RMD160 6105c20f5caffe76f0fa7b649b21bd4e0d65b20a mozilla-thunderbird-2.0.0.0-nl.xpi 182414
+SHA256 767934953dff21a7f32c662c0cdc85f0f9c0d24084e332b4f075d397e5e1cf8f mozilla-thunderbird-2.0.0.0-nl.xpi 182414
+MD5 52fae52e9322d6122536d7bbac32666b mozilla-thunderbird-2.0.0.0-pa-IN.xpi 203142
+RMD160 76636279135af469fac9a253ae9e94e8b71e25a5 mozilla-thunderbird-2.0.0.0-pa-IN.xpi 203142
+SHA256 84ed27471f103ff6b65991b842d31f0e505fbeab85e5eec476447b0dcf391f6f mozilla-thunderbird-2.0.0.0-pa-IN.xpi 203142
+MD5 db1d58d424b1d182e308319a1c3d6806 mozilla-thunderbird-2.0.0.0-pl.xpi 175831
+RMD160 169d1dfc57a80c1239a2d5cd288d36bda6f9d5eb mozilla-thunderbird-2.0.0.0-pl.xpi 175831
+SHA256 5ba999ba93aeb3c34a90a5b0649062bedcadd857b5cf16b63266faeff705cae8 mozilla-thunderbird-2.0.0.0-pl.xpi 175831
+MD5 1a187cfb70b643d3becb8182afd542dc mozilla-thunderbird-2.0.0.0-pt-BR.xpi 181195
+RMD160 c80a86b064d2dbf0b8c2d94e3fd8b476542dc792 mozilla-thunderbird-2.0.0.0-pt-BR.xpi 181195
+SHA256 157abda7a70d0ddbb846871b2f0611a24c42a25d28c3394070f995523f111bc7 mozilla-thunderbird-2.0.0.0-pt-BR.xpi 181195
+MD5 d98adfa9136477ceab824ae535d0eefb mozilla-thunderbird-2.0.0.0-pt-PT.xpi 182002
+RMD160 fc2ac3c59ea59d4b33e8a7fc1e03d287d77e632e mozilla-thunderbird-2.0.0.0-pt-PT.xpi 182002
+SHA256 6499e8cf4346393ad59e734f81378bfc7ba696cb14465e95e312c1b83dd93ea4 mozilla-thunderbird-2.0.0.0-pt-PT.xpi 182002
+MD5 a905f0c348ad4973b57bdb42437c88b2 mozilla-thunderbird-2.0.0.0-ru.xpi 172116
+RMD160 716698025eb014322dd9be9fda99a25c631baa82 mozilla-thunderbird-2.0.0.0-ru.xpi 172116
+SHA256 3e2e913f99182582280f800d0c6417fcedf8df0cdff3c16d7ef637e96da62aeb mozilla-thunderbird-2.0.0.0-ru.xpi 172116
+MD5 17b95af91fc82bf9b061f5dc8392264f mozilla-thunderbird-2.0.0.0-sk.xpi 189760
+RMD160 0df4da6ae54c22f6ffa9232490e508039bbd1a42 mozilla-thunderbird-2.0.0.0-sk.xpi 189760
+SHA256 eb0c8f15b92947a60499b38a48f572a851d6d1e9b1de3c5c7f2ba2154bf94530 mozilla-thunderbird-2.0.0.0-sk.xpi 189760
+MD5 5eaf7a43a2e57e08361faf1f2298233f mozilla-thunderbird-2.0.0.0-sl.xpi 186147
+RMD160 0b0875eff82e4075b38b77daaa5820da3b186109 mozilla-thunderbird-2.0.0.0-sl.xpi 186147
+SHA256 5bd2a02388d983d32a15ddaf17353adbda58e3ec1d8da5d453cb734d702f7a52 mozilla-thunderbird-2.0.0.0-sl.xpi 186147
+MD5 d8fe598b6883e251c44b2864e1e322c3 mozilla-thunderbird-2.0.0.0-sv-SE.xpi 190075
+RMD160 6ed8bc55c4bdfcd7a8ca3f26397903ddcb28c06c mozilla-thunderbird-2.0.0.0-sv-SE.xpi 190075
+SHA256 30f20110e50a14f41886cfb9315f70f5cfb4292c92c7d8a995d3636c130260e2 mozilla-thunderbird-2.0.0.0-sv-SE.xpi 190075
+MD5 9fde42ecb0b3867bf66573dada209a06 mozilla-thunderbird-2.0.0.0-tr.xpi 156123
+RMD160 7184730c1e706ffafd41eea382b16a171ec45b45 mozilla-thunderbird-2.0.0.0-tr.xpi 156123
+SHA256 3d8859bf76868710b6086509acc335ea02691a4b9fdb7f72b474352b2f040c22 mozilla-thunderbird-2.0.0.0-tr.xpi 156123
+MD5 613321691bcaf247cf88ff1daf8b77e6 mozilla-thunderbird-2.0.0.0-zh-CN.xpi 148711
+RMD160 59f88ca0582566c1eac4527425949c46691bf1aa mozilla-thunderbird-2.0.0.0-zh-CN.xpi 148711
+SHA256 3b167f04ba40ef051eaf2d4f49da54e39840228b5125b6156fcc9030fab543e2 mozilla-thunderbird-2.0.0.0-zh-CN.xpi 148711
+MD5 7325bca526939edcdfddcb3c1e100304 mozilla-thunderbird-2.0.0.0-zh-TW.xpi 152126
+RMD160 c12b5e4cb420eaf61a54dc12b00b0fe6ff870b6b mozilla-thunderbird-2.0.0.0-zh-TW.xpi 152126
+SHA256 32733dc9058e9cf00656c323796d3fc7b82952fda74f75f95fd515a0d4a70460 mozilla-thunderbird-2.0.0.0-zh-TW.xpi 152126
+MD5 0792ccbbb12e144f60c32238d7104514 thunderbird-2.0.0.0.tar.gz 11428569
+RMD160 b6f34eca746168a1ea74785b8bafba01df50fa7c thunderbird-2.0.0.0.tar.gz 11428569
+SHA256 68b4603485fca9291a240842fa4a79717b1ff64a73918097f8055da1c3770530 thunderbird-2.0.0.0.tar.gz 11428569
