@@ -1,6 +1,12 @@
 # ChangeLog for mail-client/mozilla-thunderbird-bin
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-client/mozilla-thunderbird-bin/ChangeLog,v 1.69 2007/04/17 14:07:06 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-client/mozilla-thunderbird-bin/ChangeLog,v 1.70 2007/04/18 22:01:11 armin76 Exp $
+
+*mozilla-thunderbird-bin-2.0.0.0 (18 Apr 2007)
+
+  18 Apr 2007; Raúl Porcel <armin76@gentoo.org>
+  +mozilla-thunderbird-bin-2.0.0.0.ebuild:
+  Version bump
 
   17 Apr 2007; Raúl Porcel <armin76@gentoo.org>
   mozilla-thunderbird-bin-1.5.0.10.ebuild:
